--- a/styles.css
+++ b/styles.css
@@ -156,8 +156,21 @@ select option {
 }
 
 .key-item button {
-    display: none;
+    margin-left: 10px;
+    background-color: #6a0080;
+    border: none;
+    padding: 10px 10px;
+    border-radius: 4px;
+    cursor: pointer;
+    color: white;
+    font-size: 14px;
+    transition: background-color 0.3s, transform 0.3s, color 0.3s;
 }
+
+.key-item button:hover {
+    background-color: #4a004d;
+}
+
 
 
 .hidden {
