--- a/styles.css
+++ b/styles.css
@@ -157,7 +157,7 @@ select option {
     width: 40px;
     padding: 10px 10px;
     background-color: #6a0080;
-    color: white;
+    color: green;
     border: none;
     border-radius: 4px;
     cursor: pointer;
