--- a/styles.css
+++ b/styles.css
@@ -151,12 +151,12 @@ select option {
 
 .key-item button {
     margin-left: 10px;
-    background-color: #6a0080;
+    background-color: #4b006e;
     border: none;
     padding: 10px 10px;
     border-radius: 4px;
     cursor: pointer;
-    color: white;
+    color: #e0b3ff;
     font-size: 14px;
     transition: background-color 0.3s, transform 0.3s, color 0.3s;
 }
