--- a/styles.css
+++ b/styles.css
@@ -134,7 +134,7 @@ select option {
     display: flex;
     align-items: center;
     margin-bottom: 10px;
-    background-color: #2c003e;
+    background-color: #4b006e;
     padding: 10px;
     border: 1px solid #ddd;
     border-radius: 4px;
@@ -142,7 +142,13 @@ select option {
 }
 
 .key-item input {
-    display: none;
+    flex-grow: 1;
+    border: none;
+    background: transparent;
+    color: #e0b3ff;
+    font-size: 16px;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .buttonall {
