--- a/styles.css
+++ b/styles.css
@@ -134,7 +134,7 @@ select option {
     display: flex;
     align-items: center;
     margin-bottom: 10px;
-    background-color: #4b006e;
+    background-color: #e0b3ff;
     padding: 10px;
     border: 1px solid #ddd;
     border-radius: 4px;
