--- a/styles.css
+++ b/styles.css
@@ -141,6 +141,20 @@ select option {
     word-wrap: break-word;
 }
 
+.key-number {
+    display: inline-block;
+    text-align: center;
+    width: 40px;
+    padding: 10px 10px;
+    background-color: #6a0080;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    margin: 5px;
+}
+
 .key-item input {
     flex-grow: 1;
     border: none;
@@ -157,7 +171,7 @@ select option {
 
 .key-item button {
     margin-left: 10px;
-    background-color: #4b006e;
+    background-color: #6a0080;
     border: none;
     padding: 10px 10px;
     border-radius: 4px;
