--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,42 @@ body {
     box-sizing: border-box;
 }
 
+.popup-overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    border: 5px solid #000;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+}
+.popup {
+    font-family: Arial, sans-serif;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    color: #fff;
+    transform: translate(-50%, -50%);
+    background: #7c6b9c;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+.popup-content {
+    text-align: center;
+    color: #e0b3ff;
+}
+.popup button {
+    background-color: #41237d;
+    color: #e0b3ff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
 .container {
     position: relative;
     background-color: #1e0027;
