--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ body {
     left: 50%;
     color: #fff;
     transform: translate(-50%, -50%);
-    background: #7c6b9c;
+    background: #071952;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
