--- a/styles.css
+++ b/styles.css
@@ -41,18 +41,18 @@ body {
     left: 50%;
     color: #fff;
     transform: translate(-50%, -50%);
-    background: #071952;
+    background: #4a5b8f;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 .popup-content {
     text-align: center;
-    color: #e0b3ff;
+    color: white;
 }
 .popup button {
-    background-color: #41237d;
-    color: #e0b3ff;
+    background-color: #4a5b8f;
+    color: white;
     padding: 10px 20px;
     border: none;
     border-radius: 4px;
