--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ body {
     color: white;
 }
 .popup button {
-    background-color: #4a5b8f;
+    background-color: #071952;
     color: white;
     padding: 10px 20px;
     border: none;
