--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body {
     box-sizing: border-box;
 }
 
-.popup-overlay {
+.popup-overlays {
     display: none;
     position: fixed;
     top: 0;
@@ -34,7 +34,7 @@ body {
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
 }
-.popup {
+.popups {
     font-family: Arial, sans-serif;
     position: absolute;
     top: 50%;
@@ -46,7 +46,7 @@ body {
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
-.popup-content {
+.popup-contents {
     text-align: center;
     color: white;
 }
