--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ body {
     text-align: center;
     color: white;
 }
-.popup button {
+.popups button {
     background-color: #071952;
     color: white;
     padding: 10px 20px;
